# quantum-minefield

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
apps/web/: package.json
apps/web/public/wasm/: .gitignore  qmf_wasm.d.ts  qmf_wasm.js  qmf_wasm_bg.wasm  qmf_wasm_bg.wasm.d.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/how-to-play/: page.tsx
apps/web/src/components/: Lobby.tsx  QuantumBoard.tsx
apps/web/src/hooks/: useQuantumGame.ts
apps/web/src/types/: quantum.ts  wasm-module.d.ts
crates/qmf-core/: Cargo.toml
crates/qmf-core/src/: circuit.rs  entanglement.rs  grid.rs  lib.rs  rng.rs
crates/qmf-wasm/: Cargo.toml
crates/qmf-wasm/src/: lib.rs
scripts/: build-wasm.sh
