[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
wasm-bindgen = "0.2.108"
js-sys = "0.3.85"
web-sys = "0.3.85"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[profile.release]
lto = true
opt-level = "s"
strip = true
